# CplusStack

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  run.sh  run_tests.sh  symbolize_stack.py  test_all_crashes.py
.claude/: settings.json
docs/: 2026-06-16-symbolize-demangle.md  _diagrams.html  known-issues.md  signal-reference.md  swp-stack-trace-principle.md  test-report.md
docs/superpowers/plans/: 2026-06-15-swp-stack-trace.md
docs/superpowers/specs/: 2026-06-15-swp-stack-trace-design.md
src/: main.cpp  swp_stack_trace.cpp
src/example/: CMakeLists.txt  crash_demo.cpp
src/include/: .gitkeep  swp_stack_trace.h
tests/: CMakeLists.txt  TestSmoke.cpp
tests/swp_stack_trace/: TestSwpStackTrace.cpp
